k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metric-workshop-deployment
  labels:
    service: metric-workshop
spec:
  replicas: 1
  selector:
    matchLabels:
      service: metric-workshop
  template:
    metadata:
      labels:
        service: metric-workshop
    spec:
      containers:
        - name: metric-workshop
          image: csindenis/metric-workshop:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "300Mi"
              cpu: "300m"
