k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: metric-workshop-service
spec:
  selector:
    service: metric-workshop
  ports:
    - name: http
      port: 8080
      protocol: TCP
